@startuml

    namespace ua.khpi.oop.malokhvii04.shell.commands.text {

        class SortTextCommand {
            {static} -description: String
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +SortTextCommand()
            {static} -getSortOrder(): boolean
            {static} -updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        class SerializeTextCommand {
            {static} -description: String
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +SerializeTextCommand()
            {static} #updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        class SearchTextCommand {
            {static} -description: String
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +SearchTextCommand()
            {static} -updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        class SearchPalindromesCommand {
            {static} -description: String
            {static} -AMOUNT_OF_PALINDROMES_IN_SINGLE_LINE: int
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +SearchPalindromesCommand()
            {static} -printPalindromes(Collection<String>): void
            {static} #updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        class SearchAnanymsCommand {
            {static} -ANANYMS_TABLE_FOOTER: String
            {static} -ANANYMS_TABLE_HEADER: String
            {static} -description: String
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +SearchAnanymsCommand()
            {static} -printAnanyms(Collection<Ananym>): void
            {static} #updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        class OutputTextCommand {
            {static} -description: String
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +OutputTextCommand()
            {static} #printTextLines(Collection<String>): void
            {static} #updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        class InputTextCommand {
            {static} -description: String
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +InputTextCommand()
            {static} -getInputText(String): ArrayList<String>
            {static} #updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        class DeserializeTextCommand {
            {static} -description: String
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +DeserializeTextCommand()
            {static} #updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        abstract class ua.khpi.oop.malokhvii04.shell.commands.AbstractCommand
        ua.khpi.oop.malokhvii04.shell.commands.AbstractCommand <|-- SortTextCommand

        abstract class ua.khpi.oop.malokhvii04.shell.commands.HandleTextFileCommand
        ua.khpi.oop.malokhvii04.shell.commands.HandleTextFileCommand <|-- SerializeTextCommand

        ua.khpi.oop.malokhvii04.shell.commands.AbstractCommand <|-- SearchTextCommand

        OutputTextCommand <|-- SearchPalindromesCommand

        OutputTextCommand <|-- SearchAnanymsCommand

        ua.khpi.oop.malokhvii04.shell.commands.AbstractCommand <|-- OutputTextCommand

        ua.khpi.oop.malokhvii04.shell.commands.HandleTextFileCommand <|-- InputTextCommand

        ua.khpi.oop.malokhvii04.shell.commands.HandleTextFileCommand <|-- DeserializeTextCommand

    }

@enduml
